# rust-markov

./: .gitignore  Cargo.toml  README.md  markov.rs  train-all.sh  triemap.rs
src/: markov.rs
