[package]

name = "markov"
version = "0.1.0"
authors = [ "nathanism@gmail.com" ]

[[bin]]

name = "markov" # the name of the executable to generate

[dependencies.msgpack]

# personal fork of msgpack that 1. has a cargo file and 2. compiles with rustc nightly
git = "https://github.com/nathanic/rust-msgpack.git"

# vi: ft=conf
